<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="15dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/setting_textclor"
        android:textSize="16dp"
        android:text="使用说明"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/cardviewbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:textSize="15dp"
            android:maxLines="25"
            android:text="@string/app_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>
    <TextView
        android:textColor="@color/setting_textclor"
        android:paddingTop="15dp"
        android:textSize="16dp"
        android:text="软件分享"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/cardviewbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:padding="5dp"
            android:textSize="15dp"
            android:maxLines="25"
            android:text="@string/app_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/share_ok"
            android:textColor="@color/buttonbar_active"
            android:padding="6dp"
            android:text="确定"
            android:layout_gravity="bottom|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:textColor="@color/setting_textclor"
        android:paddingTop="15dp"
        android:textSize="16dp"
        android:text="捐赠作者"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/cardviewbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:textSize="15dp"
                android:maxLines="25"
                android:text="@string/app_donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/donate_ok"
                android:textColor="@color/buttonbar_active"
                android:padding="6dp"
                android:text="确定"
                android:layout_gravity="bottom|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/pay_img"
                android:src="@drawable/paycode"
                android:layout_width="wrap_content"
                android:layout_height="360dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
        <TextView
            android:textColor="@color/setting_textclor"
            android:paddingTop="15dp"
            android:textSize="16dp"
            android:text="声明"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/cardviewbg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:textSize="15dp"
                android:maxLines="25"
                android:text="@string/declaraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:textColor="@color/setting_textclor"
            android:paddingTop="15dp"
            android:textSize="16dp"
            android:text="版本"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
            android:id="@+id/version"
            app:cardBackgroundColor="@color/cardviewbg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:textSize="15dp"
                android:maxLines="25"
                android:text="版本号：1.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
    <TextView
        android:textColor="@color/setting_textclor"
        android:paddingTop="15dp"
        android:textSize="16dp"
        android:text="致谢"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/cardviewbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:textSize="15dp"
            android:maxLines="25"
            android:text="@string/app_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
